--- a/javascript/lab21-22/package.json
+++ b/javascript/lab21-22/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-clean-css": "^2.0.10",
     "gulp-concat-css": "^2.3.0",
+    "gulp-connect": "^4.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-watch": "^4.3.8"
   }
 }
