--- a/javascript/lab21-22/package.json
+++ b/javascript/lab21-22/package.json
@@ -9,12 +9,16 @@
   "author": "Nazar",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.10",
+    "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
     "gulp-connect": "^4.1.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-uglify": "^1.5.4",
     "gulp-watch": "^4.3.8"
   }
 }
