--- a/javascript/lab21-22/lab_es6/package.json
+++ b/javascript/lab21-22/lab_es6/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "gulp-progect",
+  "name": "progect",
   "version": "0.1.0",
   "description": "",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "index.js",
   "author": "Nazar",
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
-    "babel-cli": "^6.0.0"
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-watch": "^4.3.8"
   }
 }
