--- a/javascript/EXAM/package.json
+++ b/javascript/EXAM/package.json
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-stylus": "^2.5.0",
-    "gulp.spritesmith": "^6.2.1"
+    "gulp-stylus": "^2.5.0"
   }
 }
