Added some scss style

--- a/loftschool/dz_webinar8/prepros.cfg
+++ b/loftschool/dz_webinar8/prepros.cfg
@@ -113,6 +113,26 @@
             "19b168e7"
           ],
           "type": "sass"
+        },
+        "46e39047": {
+          "id": "46e39047",
+          "path": "css/_misc/mixins.scss",
+          "output": "css/_misc/mixins.css",
+          "name": "mixins.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": true,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "19b168e7"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
@@ -133,7 +153,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": true
         },
         "deployment": {
           "ftpHost": "",
